Project timeline works when switching tabs

--- a/app/views/projects/show.js.erb
+++ b/app/views/projects/show.js.erb
@@ -6,5 +6,8 @@
   var htmlContent = "<%= escape_javascript render(partial: template, locals: { items: @items, more: @more }) %>";
 
   document.getElementById('content').innerHTML = htmlContent;
+  if ('<%= template %>' === 'info') {
+      new App.View.DatesTimeline();
+  }
 
 })();
