--- a/app/views/investigators/show.html.erb
+++ b/app/views/investigators/show.html.erb
@@ -15,7 +15,10 @@
       </div>
       <div class="row collapse">
         <div class="column small-8">
-          <h1><%= @investigator.name %></h1>
+          <% if @investigator.name %>
+            <h1><%= @investigator.name %></h1>
+
+          <% end %>
           <table class="c-numbers-list">
             <thead>
               <tr>
@@ -31,6 +34,13 @@
         </div>
         <div class="column small-4">
           <%= render "shared/user_actions" %>
+          <ul class="c-btn-container">
+            <li>
+              <a
+                href="http://www.ncbi.nlm.nih.gov/pubmed?term=<%= @investigator.name %>%5BAuthor%5D"
+                class="c-btn -transparent" target="_blank"><%= t 'publications' %></a>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
