Project detail tabs change event

--- a/app/assets/stylesheets/components/_dates-timeline.scss
+++ b/app/assets/stylesheets/components/_dates-timeline.scss
@@ -31,7 +31,7 @@
       background-color: $purple;
       border-radius: 10px;
       width: 0;
-      transition: width 1.5s ease-out;
+      transition: width .5s ease-out;
     }
   }
 }
