--- a/app/views/projects/_info.html.erb
+++ b/app/views/projects/_info.html.erb
@@ -36,7 +36,7 @@
     <aside class="l-sidebar">
 
       <% if @project.start_date || @project.end_date %>
-        <div class="sidebar-item c-dates-timeline">
+        <div id="datesTimeline" class="sidebar-item c-dates-timeline">
           <div class="dates">
              <% if @project.start_date %>
               <div class="date">
