Investigator: post tab added

--- a/app/views/investigators/show.html.erb
+++ b/app/views/investigators/show.html.erb
@@ -33,11 +33,13 @@
             <thead>
               <tr>
                 <th><%= t 'projects' %></th>
+                <th><%= t 'posts' %></th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <td><%= @projects.size %></td>
+                <td><%= @posts.size %></td>
               </tr>
             </tbody>
           </table>
