Footer: white-space: nowrap

--- a/app/assets/stylesheets/components/_nav.scss
+++ b/app/assets/stylesheets/components/_nav.scss
@@ -16,6 +16,7 @@
     display: flex;
     align-items: center;
     margin-right: $base-space;
+    white-space: nowrap;
 
     &:last-child {
       margin-right: 0;
