--- a/app/assets/stylesheets/components/_pipe_list.scss
+++ b/app/assets/stylesheets/components/_pipe_list.scss
@@ -9,6 +9,7 @@
     padding: 0 ($base-space / 2);
     border-right: 1px solid white;
     line-height: $small-font-size;
+    text-transform: capitalize;
 
     &:first-child {
       padding-left: 0;
@@ -16,6 +17,10 @@
 
     &:last-child {
       border: 0;
+    }
+
+    & .-hv:hover {
+      opacity: .5;
     }
   }
 }
