--- a/app/assets/stylesheets/layouts/_app.scss
+++ b/app/assets/stylesheets/layouts/_app.scss
@@ -69,8 +69,12 @@
     background-image: linear-gradient(to top, #68299b, rgba(103, 40, 155, 0));
     pointer-events: none;
 
-    .c-btn {
+    .c-btn, .-clickable {
       pointer-events: all;
+    }
+
+    * {
+      color: $inverse-font-color;
     }
   }
 
