--- a/app/views/investigators/show.html.erb
+++ b/app/views/investigators/show.html.erb
@@ -1,4 +1,5 @@
 <% title @investigator.name %>
+<% inv_user = @investigator.user %>
 
 <section class="l-app -full">
   <div class="l-app-map">
@@ -16,6 +17,46 @@
       <div class="row collapse">
         <div class="column small-8">
           <h1><%= @investigator.name %></h1>
+
+          <div class="row">
+            <div class="column small-12 medium-6">
+              <% if inv_user %>
+                <ul class="c-pipe-list">
+                  <li><%= inv_user.position ? inv_user.position : '' %></li>
+                </ul>
+              <% end %>
+              <ul class="c-pipe-list">
+                <li><%= @following %> Following</li>
+                <li><%= @followers %> Followers</li>
+              </ul>
+            </div>
+            <div class="column small-12 medium-6">
+              <ul class="c-pipe-list">
+                <% if inv_user %>
+                  <li>
+                    <% if inv_user.twitter_account %>
+                      <a href="https://twitter.com/<%= inv_user.twitter_account %>" class="-clickable -hv" target="_blank">
+                        @<%= inv_user.twitter_account %>
+                      </a>
+                    <% end %>
+                  </li>
+                  <li>
+                    <% if inv_user.linkedin_account %>
+                      <a href="https://www.linkedin.com/in/<%= inv_user.linkedin_account %>" class="-clickable -hv" target="_blank">
+                        <%= inv_user.linkedin_account %>
+                      </a>
+                    <% end %>
+                  </li>
+                <% end %>
+                <li>
+                  <a href="http://www.ncbi.nlm.nih.gov/pubmed?term=<%= @investigator.name %>%5BAuthor%5D" class="-clickable -hv" target="_blank">
+                    Pubmed
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+
           <p>
             <% if user_signed_in? && current_user.investigator == @investigator %>
               <%= link_to 'Not me', remove_relation_investigator_path(@investigator), method: :patch, class: 'c-btn -transparent' %>
@@ -24,10 +65,6 @@
             <% elsif !user_signed_in? %>
               <%= link_to 'This is me', user_session_path, class: 'c-btn -transparent' %>
             <% end %>
-
-            <a href="http://www.ncbi.nlm.nih.gov/pubmed?term=<%= @investigator.name %>%5BAuthor%5D" class="c-btn -transparent" target="_blank">
-              <%= t 'publications' %>
-            </a>
           </p>
           <table class="c-numbers-list">
             <thead>
