--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -10,6 +10,22 @@
       <div class="row collapse">
         <div class="column small-8">
           <h1><%= @organization.name %></h1>
+
+          <div class="row">
+            <div class="column small-12 medium-6">
+              <ul class="c-pipe-list">
+                <li><%= @organization.organization_type.name ? @organization.organization_type.name : '' %></li>
+              </ul>
+            </div>
+            <div class="column small-12 medium-6">
+              <ul class="c-pipe-list">
+                <li>
+                  <%= @organization.email_address ? @organization.email_address : '' %>
+                </li>
+              </ul>
+            </div>
+          </div>
+
           <table class="c-numbers-list">
             <thead>
               <tr>
