--- a/app/views/investigators/show.js.erb
+++ b/app/views/investigators/show.js.erb
@@ -1,7 +1,8 @@
 (function() {
 
   'use strict'
-  <% template = @current_type == 'people' ? "investigators/list" : "#{@current_type}/list" %>
+
+  <% template = @current_type == 'network' ? "users/network" : "#{@current_type}/list" %>
 
   var htmlContent = "<%= escape_javascript render(partial: template, locals: { items: @items, more: @more }) %>";
   var htmlCounters = "<%= escape_javascript render(partial: 'map/counters') %>"
