--- a/app/views/investigators/show.html.erb
+++ b/app/views/investigators/show.html.erb
@@ -16,15 +16,25 @@
       </div>
       <div class="row collapse">
         <div class="column small-8">
-          <h1><%= @investigator.name %></h1>
+          <div class="c-title-btn">
+            <h1><%= @investigator.name %></h1>
+            <% if user_signed_in? && current_user.investigator == @investigator %>
+              <%= link_to 'Not me', remove_relation_investigator_path(@investigator), method: :patch, class: 'c-btn -transparent' %>
+            <% elsif user_signed_in? && current_user.investigator.blank? && @investigator.user.blank? %>
+              <%= link_to 'This is me', relation_request_investigator_path(@investigator), method: :patch, class: 'c-btn -transparent' %>
+            <% elsif !user_signed_in? %>
+              <%= link_to 'This is me', user_session_path, class: 'c-btn -transparent' %>
+            <% end %>
+          </div>
 
           <div class="row">
             <div class="column small-12 medium-6">
-              <% if inv_user %>
-                <ul class="c-pipe-list">
+              <ul class="c-pipe-list">
+                <li><%= @investigator.organizations.size > 0 ? @investigator.organizations.first.name : '' %></li>
+                <% if inv_user %>
                   <li><%= inv_user.position ? inv_user.position : '' %></li>
-                </ul>
-              <% end %>
+                <% end %>
+              </ul>
               <ul class="c-pipe-list">
                 <li><%= @following %> Following</li>
                 <li><%= @followers %> Followers</li>
@@ -56,16 +66,6 @@
               </ul>
             </div>
           </div>
-
-          <p>
-            <% if user_signed_in? && current_user.investigator == @investigator %>
-              <%= link_to 'Not me', remove_relation_investigator_path(@investigator), method: :patch, class: 'c-btn -transparent' %>
-            <% elsif user_signed_in? && current_user.investigator.blank? && @investigator.user.blank? %>
-              <%= link_to 'This is me', relation_request_investigator_path(@investigator), method: :patch, class: 'c-btn -transparent' %>
-            <% elsif !user_signed_in? %>
-              <%= link_to 'This is me', user_session_path, class: 'c-btn -transparent' %>
-            <% end %>
-          </p>
           <table class="c-numbers-list">
             <thead>
               <tr>
