--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,6 +23,9 @@
           <div class="row">
             <div class="column small-12 medium-6">
               <ul class="c-pipe-list">
+                <% if user.investigator && user.investigator.organizations.size > 0 %>
+                  <li><%= user.investigator.organizations.first.name %></li>
+                <% end %>
                 <li><%= user.position ? user.position : '' %></li>
               </ul>
               <ul class="c-pipe-list">
