--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,19 +1,48 @@
-<h1>Search</h1>
-<%= simple_form_for :search, url: searches_path, method: :get do |f| %>
+<% title t('search') %>
+
+<section class="l-content">
+  <div class="wrapper">
+    <div class="row collapse">
+      <div class="column small-12">
+
+          <%= simple_form_for :search, url: searches_path, method: :get do |f| %>
+            <div class="form-row">
+              <div id="search-input" class="c-input">
+                <%= f.input :item, as: :string, label: false, autofocus: true, placeholder: 'Search for...', input_html: { value: @search_item, class: '-large' } %>
+              </div>
+            </div>
+
+            <%#= f.input :type, as: :select, collection: @sections, label: false, selected: @search_type %>
+            <%= f.input :type, as: :hidden, label: false, input_html: { value: 'All sections' } %>
+            <button type="submit" class="c-btn -secondary"><%= t 'search' %></button>
+          <% end %>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Results: <%#= @search_results.size %> -->
+  <div class="l-content">
+    <div class="wrapper">
+      <div class="row collapse">
+        <div class="column small-12">
+          <ul class="c-list row">
+            <% @search_results.each do |search| %>
+              <li class="column small-12">
+                <div class="c-search-item">
+                  <%= link_to search.try(:title) || search.try(:name), build_search_link(search.class.name, search.id) %>
+                  <% if search.try(:summary).present? || search.try(:description).present? %>
+                    <p><%= truncate(search.try(:summary) || search.try(:description), length: 150, omission: '...') %></p>
+                  <% end %>
+                </div>
+              </li>
+            <% end %>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <p>
-    <%= f.input :item, as: :string, label: false, placeholder: 'Search for projects, investigators, cancer types and events', input_html: { value: @search_item } %>
-    <%= f.input :type, as: :select, collection: @sections, label: false, selected: @search_type %>
-    <%= f.submit ' Search Database Records ' %>
+    <%#= link_to search.try(:title) || search.try(:name), build_search_link(search.class.name, search.id) %>
   </p>
-<% end %>
-Results: <%= @search_results.size %>
-<% @search_results.each do |search| %>
-  <p>
-    <%= link_to search.try(:title) || search.try(:name), build_search_link(search.class.name, search.id) %>
-  </p>
-  <% if search.try(:summary).present? || search.try(:description).present? %>
-    <p>
-      Description: <%= truncate(search.try(:summary) || search.try(:description), length: 150, omission: '...') %>
-    </p>
-  <% end %>
-<% end %>
