--- a/app/views/events/_info.html.erb
+++ b/app/views/events/_info.html.erb
@@ -15,6 +15,31 @@
 
   <div class="column small-4">
     <aside class="l-sidebar">
+      <% if @event.start_date || @event.end_date %>
+        <div id="datesTimeline" class="sidebar-item c-dates-timeline">
+          <div class="dates">
+             <% if @event.start_date %>
+              <div class="date">
+                <h3><%= t 'start_date' %></h3>
+                <span><%= @event.start_date %></span>
+              </div>
+            <% end %>
+            <% if @event.end_date %>
+              <div class="date">
+                <h3><%= t 'end_date' %></h3>
+                <span><%= @event.end_date %></span>
+              </div>
+            <% end %>
+          </div>
+
+          <% if @event.start_date && @event.end_date %>
+            <div class="timeline">
+              <div class="timeline-line"></div>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
+
       <% if @event.country && @event.country.size > 0 %>
         <% country = Country.find_by(country_name: @event.country) %>
         <div class="sidebar-item">
