--- a/app/assets/stylesheets/components/_btn-container.scss
+++ b/app/assets/stylesheets/components/_btn-container.scss
@@ -2,7 +2,12 @@
   display: flex;
   justify-content: space-between;
   padding: 0;
+  margin: 0 0 20px;
   pointer-events: all;
+
+  &:last-child {
+    margin: 0;
+  }
 
 
   > li {
