This is me button visible when logged in & projec button name changed

--- a/app/views/investigators/show.html.erb
+++ b/app/views/investigators/show.html.erb
@@ -19,11 +19,9 @@
           <div class="c-title-btn">
             <h1><%= @investigator.name %></h1>
             <% if user_signed_in? && current_user.investigator == @investigator %>
-              <%= link_to 'Not me', remove_relation_investigator_path(@investigator), method: :patch, class: 'c-btn -transparent' %>
+              <%= link_to (t 'not_me'), remove_relation_investigator_path(@investigator), method: :patch, class: 'c-btn -transparent' %>
             <% elsif user_signed_in? && current_user.investigator.blank? && @investigator.user.blank? %>
-              <%= link_to 'This is me', relation_request_investigator_path(@investigator), method: :patch, class: 'c-btn -transparent' %>
-            <% elsif !user_signed_in? %>
-              <%= link_to 'This is me', user_session_path, class: 'c-btn -transparent' %>
+              <%= link_to (t 'this_is_me'), relation_request_investigator_path(@investigator), method: :patch, class: 'c-btn -transparent' %>
             <% end %>
           </div>
 
