--- a/app/assets/javascripts/templates/actionbar.hbs
+++ b/app/assets/javascripts/templates/actionbar.hbs
@@ -1,4 +1,14 @@
 <ul class="c-actionbar">
+  {{#if visible}}
+    <li class="actionbar-item">
+      <a href="{{link}}" class="c-btn -action -thin">
+        <svg class="c-icon -small -inverse">
+          <use xlink:href="#icon-add"></use>
+        </svg>
+        {{name}}
+      </a>
+    </li>
+  {{/if}}
 
   <li class="actionbar-item">
     <button class="c-btn -action -thin js-actionbar-action" data-action="layers">
