PRoper svgs without color

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -17,8 +17,8 @@
           <div class="c-summary-info row -collapse">
             <div class="column small-12 medium-4 align-middle">
               <div class="c-avatar -small">
-                <svg class="c-icon icon-colaborators -inverse">
-                  <use xlink:href="#icon-colaborators -inverse"></use>
+                <svg class="c-icon icon-collaborators -inverse">
+                  <use xlink:href="#icon-collaborators"></use>
                 </svg>
               </div>
               <h3><%= @event.participants != nil ? @event.participants.split(',').length : 0 %>
