--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -35,8 +35,8 @@
 
             <div class="column small-12 large-4 align-middle">
               <div class="c-avatar -small">
-                <svg class="c-icon icon-colaborators -inverse">
-                  <use xlink:href="#icon-colaborators"></use>
+                <svg class="c-icon icon-collaborators -inverse">
+                  <use xlink:href="#icon-collaborators"></use>
                 </svg>
               </div>
               <h3><%= @project.investigators.count - 1 %> <%= t 'collaborator'%>(s)</h3>
