--- a/app/views/home/_list.html.erb
+++ b/app/views/home/_list.html.erb
@@ -41,7 +41,7 @@
             </h3>
           <% end %>
           <h2><%= link_to e.title, event_path(e.id) %></h2>
-          <p><%= truncate(e.description, :length => 300) %></p>
+          <p><%= truncate(e.description.html_safe, :length => 300) %></p>
         </div>
       </div>
     <% end %>
