Messages: icon button

--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -148,6 +148,16 @@
     margin: ($button-y-padding / 2) ($button-x-padding / 2);
   }
 
+  &.-icon {
+    width: 34px;
+    height: 34px;
+    border-radius: 100%;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   .notification-bubble {
     font-size: 9px;
     color: #5aade4;
