--- a/app/views/investigators/_net_list.html.erb
+++ b/app/views/investigators/_net_list.html.erb
@@ -6,7 +6,7 @@
           <div class="c-avatar -medium -ph -mg-bt"></div>
           <h2><a href="/investigators/<%= e.id %>"><%= e.name %></a></h2>
           <% if e.user %>
-            <button class="c-btn -secondary js-btn-toggle-message" data-user="<%= e.user.id %>" type="button" name="button">
+            <button class="c-btn -icon -secondary js-btn-toggle-message" data-user="<%= e.user.id %>" type="button" name="button">
               <svg class="c-icon -medium -inverse"><use xlink:href="#icon-edit"></use></svg>
             </button>
 
