--- a/app/views/projects/_list.html.erb
+++ b/app/views/projects/_list.html.erb
@@ -23,8 +23,8 @@
           </p>
           <% if controller_name === 'users' && !p.project_users.first.is_approved %>
             <span class="pending">
-              <svg class="c-icon -medium icon-Pending_icon -mg-right">
-                <use xlink:href="#icon-Pending_icon"></use>
+              <svg class="c-icon -medium icon-pending">
+                <use xlink:href="#icon-pending"></use>
               </svg>
               Pending of Confirmation
             </span>
