--- a/app/views/messages/_list.html.erb
+++ b/app/views/messages/_list.html.erb
@@ -4,7 +4,7 @@
       <div class="column small-12">
         <div class="c-card -events">
           <h2><%= e.subject %></h2>
-          <!-- <p><%#= conversation_person(e) %></p> -->
+          <p><%= conversation_person(e) %></p>
         </div>
       </div>
     <% end %>
