Project collaborator controll

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -39,7 +39,7 @@
                   <use xlink:href="#icon-collaborators"></use>
                 </svg>
               </div>
-              <h3><%= @project.investigators.count - 1 %> <%= t 'collaborator'%>(s)</h3>
+              <h3><%= @project.investigators.count != 0 ? @project.investigators.count - 1 : 0 %> <%= t 'collaborator'%>(s)</h3>
             </div>
 
             <% if @project.funding_sources && @project.funding_sources.size > 0 %>
