--- a/app/views/cancer_types/show.html.erb
+++ b/app/views/cancer_types/show.html.erb
@@ -18,12 +18,14 @@
               <tr>
                 <th><%= t 'projects' %></th>
                 <th><%= t 'people' %></th>
+                <th><%= t 'organizations' %></th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <td><%= @projects.size %></td>
                 <td><%= @people.size %></td>
+                <td><%= @cancer_type.organizations_count %></td>
               </tr>
             </tbody>
           </table>
