--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -20,6 +20,7 @@
                 <th><%= t 'projects' %></th>
                 <th><%= t 'people' %></th>
                 <th><%= t 'events' %></th>
+                <th><%= t 'organizations' %></th>
               </tr>
             </thead>
             <tbody>
@@ -27,6 +28,7 @@
                 <td><%= @projects.size %></td>
                 <td><%= @people.size %></td>
                 <td><%= @events.size %></td>
+                <td><%= @country.organizations_count %></td>
               </tr>
             </tbody>
           </table>
