IE hide default select arrows

--- a/app/assets/stylesheets/components/_pickadate-override.scss
+++ b/app/assets/stylesheets/components/_pickadate-override.scss
@@ -37,6 +37,11 @@
 
           select {
             min-width: 0;
+
+            //IE: hide select arrows
+            &::-ms-expand {
+              display: none;
+            }
           }
 
           .picker__select--year,
