--- a/app/assets/javascripts/templates/infowindow.hbs
+++ b/app/assets/javascripts/templates/infowindow.hbs
@@ -40,5 +40,8 @@
   {{#if investigations}}
     <h3>{{investigations}} investigations</h3>
   {{/if}}
+  {{#if events}}
+    <h3>{{events}} events</h3>
+  {{/if}}
 
 </div>
