--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -46,19 +46,38 @@
     }
 
     .form-message {
-      display: none;
       position: absolute;
+      visibility: hidden;
+      opacity: 0;
       top: 100%;
       left: 50%;
-      transform: translate(-50%,-50px);
+      transform: translate(-50%,-70px);
+      transition: all 0.2s $easeInOutCubic;
       z-index: 2;
       background: white;
       padding: 20px;
       width: 100%;
+      border: 1px solid $border-color-1;
       box-shadow: $box-shadow;
 
+      &:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translate(-50%,-50%) rotate(45deg);
+        width: 16px;
+        height: 16px;
+        background: white;
+        border-left: 1px solid $border-color-1;
+        border-top: 1px solid $border-color-1;
+
+      }
+
       &.-active {
-        display: block;
+        visibility: visible;
+        opacity: 1;
+        transform: translate(-50%,-60px);
       }
     }
   }
