--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,9 +12,14 @@
   </div>
 
   <div class="form-row row">
-    <div class="column small-12 medium-10 medium-offset-1">
+    <div class="column small-12 medium-5 medium-offset-1">
       <h4 class="c-title">Position</h4>
       <%= f.input :position, label: false %>
+    </div>
+
+    <div class="column small-12 medium-5">
+      <h4 class="c-title">Pubmed</h4>
+      <%= f.input :pubmed, placeholder: "", label: false %>
     </div>
   </div>
 
