--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,15 +18,23 @@
       </div>
       <div class="row collapse">
         <div class="column small-8">
-          <h1><%= user.try(:name) %></h1>
-
+          <div class="c-title-btn">
+            <% if user.name && user.name != "" %>
+              <h1><%= user.try(:name) %></h1>
+            <% end %>
+            <%= link_to (t 'edit'), edit_user_path(current_user.id), class: "c-btn -transparent" %>
+          </div>
           <div class="row">
             <div class="column small-12 medium-6">
               <ul class="c-pipe-list">
-                <% if user.investigator && user.investigator.organizations.size > 0 %>
-                  <li><%= user.investigator.organizations.first.name %></li>
+                <li>
+                  <% if user.investigator && user.investigator.organizations.size > 0 %>
+                    <%= user.investigator.organizations.first.name %>
+                  <% end %>
+                </li>
+                <% if user.position %>
+                  <%= user.position %>
                 <% end %>
-                <li><%= user.position ? user.position : '' %></li>
               </ul>
               <ul class="c-pipe-list">
                 <li><%= @following %> Following</li>
@@ -53,9 +61,9 @@
                 <% else %>
                   <li>Linkedin</li>
                 <% end %>
-                <% if user.pubmed %>
+                <% if user.pubmed || user.name %>
                   <li>
-                    <a href="http://www.ncbi.nlm.nih.gov/pubmed?term=<%= user.pubmed %>%5BAuthor%5D" class="-clickable -hv" target="_blank">
+                    <a href="http://www.ncbi.nlm.nih.gov/pubmed?term=<%= user.pubmed || user.name  %>%5BAuthor%5D" class="-clickable -hv" target="_blank">
                       Pubmed
                     </a>
                   </li>
