--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -26,12 +26,12 @@
   <div class="form-row row">
     <div class="column small-12 medium-5 medium-offset-1">
       <h4 class="c-title">Twitter</h4>
-      <%= f.input :twitter_account, placeholder: "", label: false %>
+      <%= f.input :twitter_account, label: false %>
     </div>
 
     <div class="column small-12 medium-5">
       <h4 class="c-title">Linkedin</h4>
-      <%= f.input :linkedin_account, placeholder: "", label: false %>
+      <%= f.input :linkedin_account, label: false %>
     </div>
   </div>
 
