Analytics: events added to share and layers

--- a/app/assets/javascripts/templates/share.hbs
+++ b/app/assets/javascripts/templates/share.hbs
@@ -17,19 +17,19 @@
         </div>
 
         <div class="c-share-social">
-          <a href="https://twitter.com/share?url={{this.urlEncoded}}" target="_blank" class="c-btn -primary -with-icon -twitter js-btn-share-social" type="button" name="button">
+          <a href="https://twitter.com/share?url={{this.urlEncoded}}" data-social="Twitter" target="_blank" class="c-btn -primary -with-icon -twitter js-btn-share-social" type="button" name="button">
             <svg class="c-icon -small -inverse">
               <use xlink:href="#icon-twitter"></use>
             </svg>
             Twitter
           </a>
-          <a href="https://www.facebook.com/sharer/sharer.php?u={{this.urlEncoded}}&t=Global Cancer Project Map" target="_blank" class="c-btn -primary -with-icon -facebook js-btn-share-social" type="button" name="button">
+          <a href="https://www.facebook.com/sharer/sharer.php?u={{this.urlEncoded}}&t=Global Cancer Project Map" data-social="Facebook" target="_blank" class="c-btn -primary -with-icon -facebook js-btn-share-social" type="button" name="button">
             <svg class="c-icon -small -inverse">
               <use xlink:href="#icon-facebook"></use>
             </svg>
             Facebook
           </a>
-          <!--<a href="https://www.linkedin.com/shareArticle?mini=true&url={{this.urlEncoded}}&title=Global Cancer Project Map&summary=&source=" target="_blank" class="c-btn -primary -with-icon -linkedin js-btn-share-social" type="button" name="button">
+          <!--<a href="https://www.linkedin.com/shareArticle?mini=true&url={{this.urlEncoded}}&title=Global Cancer Project Map&summary=&source=" data-social="Linkedin" target="_blank" class="c-btn -primary -with-icon -linkedin js-btn-share-social" type="button" name="button">
             <svg class="c-icon -small -inverse">
               <use xlink:href="#icon-linkedin"></use>
             </svg>
