Message button in investigator detail page

--- a/app/views/investigators/_net_list.html.erb
+++ b/app/views/investigators/_net_list.html.erb
@@ -9,10 +9,9 @@
             <button class="c-btn -icon -secondary js-btn-toggle-message" data-user="<%= e.user.id %>" type="button" name="button">
               <svg class="c-icon -normal -inverse"><use xlink:href="#icon-message"></use></svg>
               <svg class="c-icon -normal -inverse -hidden"><use xlink:href="#icon-close"></use></svg>
-
             </button>
 
-            <div id="form-message-<%= e.user.id %>" class="form-message js-form-message">
+            <div id="form-message-<%= e.user.id %>" class="c-form-message js-form-message">
               <%= form_for Mailboxer::Message.new, remote: true, url: :message, as: :message do |f| %>
         				<div class="form-row">
         					<%= f.label :subject, 'Subject' %>
