Analytics: User manual event

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -29,7 +29,7 @@
             <li class="c-translate">
               <div id="googleTranslateGCPM"></div>
             </li>
-            <li>
+            <li id="userManualDownload">
               <%= link_to t('download'), download_user_manual_path,
                 download: 'user-manual', title: t('user-manual')
               %>
