Analytics: add analytics event to event form

--- a/app/views/network_events/new.html.erb
+++ b/app/views/network_events/new.html.erb
@@ -1,5 +1,7 @@
 <div class="c-project-form">
   <div class="wrapper">
-    <%= render 'form', action: 'new' %>
+    <div id="newEventView">
+      <%= render 'form', action: 'new' %>
+    </div>
   </div>
 </div>
