Toggle conversations functionality when switching tabs

--- a/app/views/users/show.js.erb
+++ b/app/views/users/show.js.erb
@@ -6,5 +6,5 @@
 
   document.getElementById('content').innerHTML = htmlContent;
 
-  App.trigger('Remote:load');
+  App.trigger('Remote:load', { data: '<%= @current_type %>' });
 })();
