--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -31,10 +31,7 @@
     max-width: $modal-max-width;
     top: 50%;
     left: 50%;
-    bottom: 0;
-
     background: $body-bg-color;
-    padding: $box-space;
 
     transform: translate(-50%, -50%);
     z-index: 1;
@@ -42,9 +39,10 @@
 
   .modal-content {
     position: relative;
-    flex: 1;
-    overflow: auto;
+    width: 100%;
     max-height: 85vh;
+    padding: $box-space;
+    overflow: auto;
     -webkit-overflow-scrolling: touch;
   }
 
